dynamodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb-local
  template:
    metadata:
      labels:
        app: dynamodb-local
    spec:
      containers:
        - name: dynamodb-local
          image: amazon/dynamodb-local
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-local
spec:
  selector:
    app: dynamodb-local
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
