coupon-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon-app
  template:
    metadata:
      labels:
        app: coupon-app
    spec:
      containers:
        - name: coupon-app
          image: coupon-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coupon-app
spec:
  selector:
    app: coupon-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coupon-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://127.0.0.1:59341"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: coupon-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coupon-app
                port:
                  number: 8080
